@@ -196,6 +196,12 @@ div.submenu {
 	color: #7d7d7d;
 	margin: 0 0 1em 1em;
 }
+#siteNotice {
+	position: relative;
+	text-align: center;
+	font-size: 95%;
+	padding: 0 0.9em;
+}
 
 /* navbar elements */
 
