@@ -6,6 +6,7 @@ Zusätzlich können die folgenden Seiten geändert werden, um das Aussehen Ihres
 
 * [[JAMWiki:Sidebar]] - Das links auf jeder Seite vorhandene Navigationsmenü.
 * [[JAMWiki:Footer]] - Die Fußzeile die unten auf jeder Seite erscheint.
+* [[JAMWiki:Header]]
 * [[JAMWiki:System.css]] - Das Stylesheet das CSS Konfigurationseinstellungen zur grafischen Gestaltung dieser Webseiten enthält.
 
 Bitte teilen Sie uns auf [http://jamwiki.org/ jamwiki.org] mit, ob Ihre JAMWiki Installation erfolgreich war. Rückmeldungen, Fragen und Bug-Beschreibungen sollten Sie bitte auch unter [http://jamwiki.org/ jamwiki.org] hinterlassen, so dass JAMWiki stetig weiter verbessert werden kann. Zusätzlich finden Sie auf [http://jamwiki.org/ jamwiki.org] immer die aktuellste Dokumentation, die z.B. auch beschreibt, wie Sie Ihre Installation weiter für Ihre Bedürfnisse anpassen können.
