@@ -4,6 +4,7 @@ Pode editar calquera páxina premendo na pestana "Editar" na parte superior da p
 
 * [[JAMWiki:Sidebar]] - O menú esquerdo de navegación que aparece en cada páxina.
 * [[JAMWiki:Footer]] - O pé de páxina que aparece en cada páxina.
+* [[JAMWiki:Header]]
 * [[JAMWiki:System.css]] - A folla de estilos que contén información de estilo CSS para o seu wiki.
 
 Para rematar, por favor contribúan ao proxecto JAMWiki presentando informes do éxito ou fracaso da súa instalación en [http://jamwiki.org/ jamiki.org] de modo que JAMWiki poida seguir mellorando.  Ademais, en [http://jamwiki.org/ jamwiki.org] atópase a documentación actualizada de JAMWiki, incluíndo instrucións para personalizar aínda máis a súa instalación.
