@@ -19,6 +19,8 @@ New Features:
     Example: "{{PAGENAME:Template:Main Page}}".
   * Move the system topics (BottomArea, LeftMenu, StyleSheet) to the
     JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
+  * Add a new JAMWiki:Header system topic that allows adding a custom message
+    to the top of all pages, just below the tab bar.
   * Remove ability to automatically upgrade from versions prior to 1.0.
   * Upgrade to commons-lang 3.0.1.
   * Upgrade to commons-io-2.1.
